--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "gulp test"
   },
   "author": "",
   "license": "ISC",
@@ -16,15 +16,22 @@
     "babelify": "^7.2.0",
     "browser-sync": "^2.11.1",
     "browserify": "^13.0.0",
+    "chai": "^3.5.0",
     "gulp": "^3.9.1",
     "gulp-autoprefixer": "^3.1.0",
     "gulp-clean": "^0.3.2",
     "gulp-concat-css": "^2.3.0",
     "gulp-cssmin": "^0.1.7",
+    "gulp-istanbul": "^1.0.0",
     "gulp-less": "^3.0.5",
+    "gulp-mocha": "^3.0.1",
     "gulp-uglify": "^1.5.2",
     "gulp-watch": "^4.3.5",
+    "isparta": "^4.0.0",
     "jquery": "^3.1.0",
+    "jsdom": "^9.4.2",
+    "mocha": "^3.0.2",
+    "mocha-jsdom": "^1.1.0",
     "vinyl-buffer": "^1.0.0",
     "vinyl-source-stream": "^1.1.0"
   }
