--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "gulp test"
+    "test": "gulp test",
+    "build": "gulp browserify && gulp cssmin"
   },
   "author": "",
   "license": "ISC",
@@ -22,6 +23,7 @@
     "gulp-clean": "^0.3.2",
     "gulp-concat-css": "^2.3.0",
     "gulp-cssmin": "^0.1.7",
+    "gulp-eslint": "^3.0.1",
     "gulp-istanbul": "^1.0.0",
     "gulp-less": "^3.0.5",
     "gulp-mocha": "^3.0.1",
